# testIPv6

./: CMakeLists.txt  Readme.md
CppUtile/: config
client_network/: config
client_network_kcp/: common_algorithm.h  connection.cpp  connection.h  network_connection_manager.h
common-c-library/: config
docs/: IPv6 socket编程.md  app_ios_ipv6_joel.md  getaddrinfo.md  getifaddr_ios.md  inet_example.md  inet_pton.md  ios_ifconfig_nat64.md  ipv6_sockaddr_structor.md  ipv6_to_ipv4.md  port_inetaddr.md  sockaddr_sockaddr_in_sockaddr_in6.md  socket_based_communication_using_ipv6.md  socket_bind_listen.md  socket_v4_v6_connect_xunmengdqingmao.md  wechat-IPv6 socket编程.md
hast/: config
ipv6_to_ipv4/ipv6_to_ipv4/: ipv4_ipv6_interface.c  ipv4_ipv6_interface.cpp  ipv4_ipv6_interface.h  ipv6_to_ipv4.vcxproj
ipv6_to_ipv4/ipv6_to_ipv4_ios/: Info.plist  ViewController.m  ViewController.mm
ipv6_to_ipv4/ipv6_to_ipv4_ios.xcodeproj/: project.pbxproj
ipv6_to_ipv4/ipv6_to_ipv4_ios.xcodeproj/project.xcworkspace/xcuserdata/lijin.xcuserdatad/: UserInterfaceState.xcuserstate
ipv6_to_ipv4/ipv6_to_ipv4_ios.xcodeproj/xcuserdata/lijin.xcuserdatad/xcschemes/: ipv6_to_ipv4_ios.xcscheme  xcschememanagement.plist
libchen_libsocket/: config
libraries/: config
libsocket/: config
lightcone/: config
lightcone/lightcone/: configure  sockaddr.h
mpstatd/: config
netLink/: config
netLink/src/: Socket.cpp
networkCommunication-client-server/: config
ref/: Connection-based Server.c  beej_ipv6_tcp_server.c  client_v6.c  coco_flow_tool.c  local_ipstack.cc.txt.IPv6_only.cpp  localselectserver  loopback_in.cpp  native_ip_synthesizer.cc  selectserver  selectserver.c  server_v6.c  tcp_loopback_client  tcp_loopback_client.c
s-net_linux_win/: config
